# UString

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  ParseUnicodeData.py  README.md
Docs/: Doxyfile
Include/UString/: UChar.h  UString.h
Source/: CMakeLists.txt  UChar.cpp  UString.cpp
Tests/: CMakeLists.txt  Test.cpp  TestAssignment.cpp  TestComparison.cpp  TestConversion.cpp  TestErase.cpp  TestFind.cpp  TestIterator.cpp  TestReplace.cpp  TestSubstring.cpp  TestUChar.cpp  catch.hpp
